# Kamil_Maj_Projects

./: README.md
Cpp/Ex_no_ 8 (warehouse network simulation)/: CMakeLists.txt  main.cpp
Cpp/Ex_no_ 8 (warehouse network simulation)/include/: helpers.hpp  nodes.hpp  package.hpp  storage_types.hpp  types.hpp
Cpp/Ex_no_ 8 (warehouse network simulation)/src/: helpers.cpp  nodes.cpp  package.cpp  storage_types.cpp
Cpp/Ex_no_1/matlab-2/: main.cpp
Cpp/Ex_no_2/catalogue-1/: CMakeLists.txt  main.cpp
Cpp/Ex_no_2/matlab-3/: main.cpp
Cpp/Ex_no_3/matlab-4/: CMakeLists.txt  main.cpp
Cpp/Ex_no_3/vehicles-1/: CMakeLists.txt  main.cpp
Cpp/Ex_no_3/vehicles-1/include/: vehicles.hpp
Cpp/Ex_no_3/vehicles-1/src/: vehicles.cpp
Cpp/Ex_no_3/vehicles-1/test/: test_vehicles.cpp
Cpp/Ex_no_4/complex-1/: CMakeLists.txt  main.cpp
Cpp/Ex_no_4/shapes-1/: CMakeLists.txt  main.cpp
Cpp/Ex_no_4/vehicles-2/: main.cpp
Cpp/Ex_no_5/vehicles-3/: main.cpp
Cpp/Ex_no_6/matlab-7/: main.cpp
Cpp/Ex_no_6/matlab-8/: main.cpp
Cpp/Ex_no_7 (travelling salesman problem)/: main.cpp
Cpp/Ex_no_7 (travelling salesman problem)/include/: TSP.hpp
Cpp/Ex_no_7 (travelling salesman problem)/src/: TSP.cpp
Python/: Wisielec Gra.exe — skrót .lnk
Python/Ex_from_university/Lab 1/: ASD_LAB_1.py
Python/Ex_from_university/Lab 10/: ASD_LAB_10.py
Python/Ex_from_university/Lab 11 DOD/: ASD_LAB_11_DOD.py  cos (1).py  cos.py  main.py
Python/Hangman_game/: Hasla_latwe  Zapis i Odczyt
STM32/HTTP_RTOS/: .cproject  .mxproject  .project  HTTP_RTOS Debug.launch  HTTP_RTOS.ioc
(+238 files in other folders)
